# a2s-query

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: errors.rs  info.rs  lib.rs  main.rs  players.rs  rules.rs
src/utils/: mod.rs  read_string.rs
tests/: info.rs  players.rs
