[package]
name = "a2s_query"
version = "0.1.1"
edition = "2024"

[lib]
name = "a2s_query"
path = "src/lib.rs"

[[bin]]
name = "a2s-query"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
bzip2 = "0.6.1"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
